# Ratio

./: CMakeLists.txt  README.md
libRatio/: CMakeLists.txt
libRatio/doc/: CMakeLists.txt
libRatio/include/: Ratio.hpp  RatioGenerator.hpp
libRatio/src/: Ratio.cpp
unitTest/: CMakeLists.txt  README.md  complexTests.cpp  intermediateTests.cpp  simpleTests.cpp
unitTest/src/: complexTests.cpp  intermediateTests.cpp  simpleTests.cpp
